infra/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fromprom
  labels:
    app.kubernetes.io/name: fromprom
