infra/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fromprom-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthy
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          # ai-service와 search-service는 배포 후 활성화
          # - path: /api/ai
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ai-service
          #       port:
          #         number: 31000
          # - path: /api/search
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: search-service
          #       port:
          #         number: 32000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
